# hstream

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .hlint.yaml  .stylish-haskell.yaml  CODE_OF_CONDUCT.md  ChangeLog.md  Dockerfile  Dockerfile.deps  LICENSE  LICENSE.logdevice  Makefile  README.md  cabal.project  cabal.project.ghc810  cabal.project.ghc9  cabal.project.hadmin.store  hie.yaml  hstream.cabal  shell.nix  stack.yaml  swagger.json
common/: go.mod  hstream-common.cabal
common/HStream/: Exception.hs  Foreign.hs  Logger.hs  Stats.hs  Utils.hs
common/HStream/Common/: ConsistentHashing.hs  Query.hs  RqliteUtils.hs  Types.hs
common/HStream/MetaStore/: FileUtils.hs  RqliteUtils.hs  Types.hs  ZookeeperUtils.hs
common/HStream/Stats/: Internal.hs
common/HStream/Utils/: Aeson.hs  BuildRecord.hs  Codec.hs  Common.hs  Compression.hs  Concurrent.hs  Converter.hs  Format.hs  JSON.hs  RPC.hs  Table.hs  Time.hs  TimeInterval.hs  Validation.hs
common/HStream/bench/: Bench.hs  CompresstionBench.hs
common/api/: Setup.hs  go.mod  hstream-api-hs.cabal  hstream-api-protolens.cabal  hstream-common-api.cabal
common/api/cpp/: hstream-api-cpp.cabal
common/api/python/: LICENSE  README.md  pyproject.toml  setup.py  setup_temp.py
common/base/: hstream-common-base.cabal
common/base/HStream/: Base.hs  Foreign.hs  Logger.hs  LoggerOld.hs
common/base/cbits/: fatalsignal.cpp  hs_struct.cpp  hs_utils.cpp
common/base/include/: hs_common.h
common/bench/: CodecBench.hs  CompresstionBench.hs  stats.hs
common/cbits/: checks.h  hash.cpp  hs_stats.cpp  hs_struct.cpp  hs_utils.cpp  query.cpp  stats.cpp  utils.cpp
common/cbits/query/: Query.cpp  Query.h  Table.h
common/cbits/stats/: Stats.h
common/clib/: stats.cpp  stats.h  struct.cpp
common/clients/cpp/: AdminClient.cpp  AdminClient.h
common/hstream/: Setup.hs  hstream-common.cabal
common/hstream/HStream/: Exception.hs  Instances.hs  Logger.hs  Utils.hs
common/hstream/bench/: CompresstionBench.hs  Util.hs
common/hstream/cbits/: hash.cpp  query.cpp  (+1 more)
common/include/: hs_common.h  hs_cpp_lib.h  per_stream_stats.inc
common/kafka/: hstream-kafka.cabal
common/metrics/: CHANGELOG.md  LICENSE  hstream-common-metrics.cabal
common/server/: hstream-common-server.cabal
common/stats/: hstream-common-stats.cabal
common/version/: CHANGELOG.md  LICENSE  hstream-version.cabal
hstream/: ChangeLog.md  Main.hs  config.example.yaml  hstream.cabal
hstream-admin/: hstream-admin.cabal
hstream-admin-server/: README.md  hstream-admin-server.cabal
hstream-admin-server/app/: Main.hs
hstream-admin/app/: admin.hs  cli.hs  examples.sql
hstream-admin/server/: hstream-admin-server.cabal
hstream-admin/store/: hstream-admin-store.cabal
hstream-connector/: hstream-connector.cabal
hstream-core/: README.md  hstream-core.cabal
hstream-core/benchmark/: store-benchmark.hs
hstream-core/tools/: store-bench.hs
hstream-diffflow/: CHANGELOG.md  diff-flow.cabal
hstream-diffflow/bench/: benchmark.hs  throughout-join.hs  throughout-map.hs  throughout-reduce.hs  throughout.hs
hstream-diffflow/example/: Distinct.hs  Loop.hs  Main.hs  Reduce.hs  compose.hs
hstream-gossip/: CHANGELOG.md  hstream-gossip.cabal
hstream-gossip/app/: Client.hs  Server.hs
hstream-hesp/: ChangeLog.md  README.md  hesp.cabal
hstream-hesp/benchmark/: Benchmark.hs
hstream-http-server/: README.md  go.mod  go.sum  hstream-admin-server.cabal  hstream-http-server.cabal  main.go
hstream-http-server/app/: Main.hs  Swagger.hs
hstream-http-server/src/: append.go  common.go  server_test.go
hstream-http-server/test/: connector_test.go  query_test.go  server_test.go  stats_test.go  storeAdmin_test.go  stream_test.go  subscription_test.go  view_test.go
hstream-io/: hstream-io.cabal
hstream-kafka/: README.md  hstream-kafka.cabal
hstream-kafka/cbits/: hs_kafka_client.cpp  hs_kafka_server.cpp
hstream-kafka/include/: hs_kafka_server.h
hstream-kafka/message/: README.md
hstream-processing/: .stylish-haskell.yaml  ChangeLog.md  README.md  format.sh  hstream-lib.cabal  hstream-processing.cabal  stack.yaml
hstream-processing/example/: LogDeviceExample0.hs  ProcessorExample0.hs  ProcessorExample1.hs  StreamExample0.hs  StreamExample1.hs  StreamExample2.hs  StreamExample3.hs  StreamExample4.hs  StreamExample5.hs
hstream-server/: CHANGELOG.md  README.md  hstream-server.cabal
hstream-server/app/: Server.hs
hstream-slt/: hstream-slt.cabal
hstream-slt/app/: Main.hs
hstream-slt/examples/: basic.slt
hstream-sql/: README.md  cabal.project  hstream-sql.cabal
hstream-sql/app/: Lib.hs  PlanTestRunner.hs  SyntaxTestRunner.hs
hstream-sql/etc/: Lex.x  Par.y  SQL-v1.cf  SQL-v2.cf  SQL.cf  install.sh  plan-test-cases.yaml  syntax-test-cases.yaml
hstream-sql/example/: Example.hs
hstream-sql/sql-example-logdevice/: Example.hs
hstream-sql/sql-example-mock/: Example.hs
hstream-store/: ChangeLog.md  README.md  hstream-store.cabal
hstream-store/HStream/: Exception.hs  PubSub.hs  Store.hs  TopicApi.hs
hstream-store/admin/: Makefile  README.md  cabal.project  hie.yaml  hstore-admin.cabal
hstream-store/app/: hstore.hs  hstoreWriteBenchTool.hs  readBench.hs  writeBench.hs
hstream-store/bench/: AppendBatchBench.hs  AppendBench.hs  Bench.hs  LogExtraAttrs.hs  SortBench.hs  StreamBench.hs  checkpoint_store.cpp  create_log_config_types.cpp
hstream-store/benchmark/: Main.hs
hstream-store/cbits/: hs_checkpoint.cpp  hs_checkpoint_store.cpp  hs_logattribute.cpp  hs_logconfigtypes.cpp  hs_logdevice.cpp  hs_logdevice_admin.cpp  hs_logdevice_appender.cpp  hs_logdevice_reader.cpp  utils.cpp
hstream-store/docker/: docker-compose.yaml
hstream-store/include/: ghc_ext.h  hs_logdevice.h  utils.h
hstream-store/logdevice/: README.md
hstream/HStream/: Format.hs
hstream/app/: client.hs  kafka-client.hs  kafka-server.hs  server.hs
hstream/client/: Main.hs
hstream/common/: hstream-common.cabal
hstream/server/: Main.hs
hstream/sql-example/: Example.hs
hstream/sql-example-logdevice/: Example.hs
hstream/sql-example-mock/: Example.hs
(+808 files in other folders)
