cabal-version: 2.2
name:          hstream-common
version:       0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on Github at
  <https://github.com/hstreamdb/hstream#readme>

license:       BSD-3-Clause
license-file:  LICENSE
copyright:     Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:        Feng Lee <feng@emqx.io>
maintainer:    lambda@emqx.io, wangbin@emqx.io, comonad@emqx.io
tested-with:   GHC ==8.8.4 || ==8.10.4
category:      Database
homepage:      https://github.com/hstreamdb/hstream
bug-reports:   https://github.com/hstreamdb/hstream/issues
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

library
  exposed-modules:
    HStream.Logger
    HStream.Server.HStreamApi
    HStream.ThirdParty.Protobuf
    HStream.Utils

  other-modules:
    HStream.Utils.BuildRecord
    HStream.Utils.Converter
    HStream.Utils.Format
    HStream.Utils.RPC
    ThirdParty.Google.Protobuf.Empty
    ThirdParty.Google.Protobuf.Struct
    ThirdParty.Google.Protobuf.Timestamp

  hs-source-dirs:     . gen-src
  cxx-sources:        cbits/utils.cpp
  build-depends:
    , aeson
    , base                  >=4.11 && <5
    , bytestring
    , containers
    , deepseq
    , grpc-haskell
    , grpc-haskell-core
    , proto3-suite
    , proto3-wire
    , random
    , raw-strings-qq
    , scientific
    , swagger2
    , table-layout
    , text
    , time
    , unordered-containers
    , vector
    , Z-Data
    , Z-IO

  cxx-options:        -std=c++17
  cpp-options:        -std=c++17
  extra-lib-dirs:     /usr/local/lib
  include-dirs:       include /usr/local/include
  default-language:   Haskell2010
  default-extensions:
    EmptyDataDeriving
    GADTSyntax
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite hstream-common-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  other-modules:      HStream.UtilsSpec
  build-depends:
    , base            >=4.11 && <5
    , containers      ^>=0.6
    , hspec
    , hstream-common
    , random          ^>=1.2
    , Z-Data
    , Z-IO

  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications

  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover ==2.*
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N
