cabal-version:      2.4
name:               hstream-common
version:            0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on GitHub at
  <https://github.com/hstreamdb/hstream#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             Feng Lee <feng@emqx.io>
maintainer:         lambda@emqx.io, wangbin@emqx.io, comonad@emqx.io
tested-with:        GHC ==8.10.4
category:           Database
homepage:           https://github.com/hstreamdb/hstream
bug-reports:        https://github.com/hstreamdb/hstream/issues
build-type:         Custom
extra-source-files:
  cbits/**/*.h
  clients/**/*.h
  gen-cpp/**/*.h
  include/**/*.h
  include/**/*.inc

custom-setup
  setup-depends:
    , base   >=4.5 && <5
    , Cabal  >=2.4 && <4

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

library
  exposed-modules:
    HStream.Common.ConsistentHashing
    HStream.Common.Query
    HStream.Foreign
    HStream.Logger
    HStream.Server.HStreamApi
    HStream.Server.HStreamInternal
    HStream.Stats
    HStream.ThirdParty.Protobuf
    HStream.Utils

  other-modules:
    Google.Protobuf.Empty
    Google.Protobuf.Struct
    HStream.Stats.Internal
    HStream.Utils.BuildRecord
    HStream.Utils.Common
    HStream.Utils.Concurrent
    HStream.Utils.Converter
    HStream.Utils.Format
    HStream.Utils.JSON
    HStream.Utils.RPC
    HStream.Utils.Table
    HStream.Utils.TimeInterval

  hs-source-dirs:     . gen-hs
  include-dirs:       . include gen-cpp /usr/local/include
  includes:
    hs_common.h
    hs_cpp_lib.h

  install-includes:   hs_cpp_lib.h
  cxx-sources:
    cbits/hs_struct.cpp
    cbits/hs_utils.cpp
    cbits/query/Query.cpp
    cbits/query/tables/AdminCommandTable.cpp
    cbits/query.cpp
    cbits/stats/Stats.cpp
    cbits/stats.cpp
    clients/cpp/AdminClient.cpp
    gen-cpp/HStream/Server/HStreamApi.grpc.pb.cc
    gen-cpp/HStream/Server/HStreamApi.pb.cc

  build-tool-depends: hsc2hs:hsc2hs -any, cpphs:cpphs >=1.20 && <1.21
  build-depends:
    , aeson
    , ansi-terminal
    , attoparsec
    , base                  >=4.11  && <5
    , bytestring
    , casing                >=0.1.4
    , containers
    , data-default
    , deepseq
    , ghc-prim              >=0.5   && <1.0
    , grpc-haskell
    , grpc-haskell-core
    , hashable
    , primitive             ^>=0.7
    , proto3-suite
    , proto3-wire
    , random
    , raw-strings-qq
    , scientific
    , swagger2
    , table-layout
    , text
    , time
    , unordered-containers
    , vector
    , Z-Data
    , Z-IO
    , zoovisitor

  cxx-options:        -std=c++17
  cpp-options:        -std=c++17
  extra-lib-dirs:     /usr/local/lib
  extra-libraries:
    stdc++
    atomic
    grpc++
    gpr
    grpc++_reflection
    protobuf
    folly
    logdevice
    ldquery
    glog
    boost_context

  default-language:   Haskell2010
  default-extensions:
    EmptyDataDeriving
    GADTSyntax
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes
    UnliftedNewtypes

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite hstream-common-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  other-modules:
    HStream.ConsistentHashingSpec
    HStream.StatsSpec
    HStream.UtilsSpec

  build-depends:
    , base                  >=4.11 && <5
    , containers            ^>=0.6
    , hspec
    , hstream-common
    , QuickCheck
    , random                ^>=1.2
    , text
    , unordered-containers
    , Z-Data
    , Z-IO

  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications

  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover ==2.*
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N

benchmark common-bench-stats
  type:               exitcode-stdio-1.0
  main-is:            stats.hs
  hs-source-dirs:     bench
  build-depends:
    , base            >=4.11 && <5
    , bytestring      ^>=0.10
    , criterion       ^>=1.5
    , hstream-common
    , Z-Data

  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes

  default-language:   Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N
