cabal-version:      2.2
name:               hstream-admin-server
version:            0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on Github at
  <https://github.com/hstreamdb/hstream#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             Qinghao Huang
maintainer:         huangqinghao@emqx.io
category:           Streaming
homepage:           https://github.com/hstreamdb/hstream
bug-reports:        https://github.com/hstreamdb/hstream/issues
build-type:         Simple
extra-source-files: README.md

executable hstream-admin-server
  main-is:          Main.hs

  build-depends:
    , base              >=4.11 && <5
    , servant
    , servant-server
    , warp    
    , hstream-admin-server
    , hstream-store
    , hstream-processing
    , Z-Data


  hs-source-dirs:   app
  default-language: Haskell2010

library
  hs-source-dirs:   src
  exposed-modules:
    HStream.Admin.Server.Stream
  build-depends:
    , base              >=4.11 && <5
    , servant
    , servant-server
    , warp    
    , hstream
    , hstream-store
    , hstream-connector
    , aeson
    , Z-Data
    , containers
    , text