cabal-version: 2.2
name:          hstream-admin
version:       0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on GitHub at
  <https://github.com/hstreamdb/hstream#readme>

license:       BSD-3-Clause
license-file:  LICENSE
copyright:     Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:        lambda@emqx.io
maintainer:    lambda@emqx.io
tested-with:   GHC ==8.10.4
category:      Database
homepage:      https://github.com/hstreamdb/hstream
bug-reports:   https://github.com/hstreamdb/hstream/issues
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

library
  hs-source-dirs:     .
  exposed-modules:
    HStream.Admin.Command
    HStream.Admin.Types

  other-modules:      HStream.Admin.Command.ServerSql
  build-depends:
    , base                  >=4.11.1   && <4.15
    , bytestring            ^>=0.10.8.2
    , colourista            ^>=0.1.0.1
    , containers
    , data-default
    , deepseq
    , hashable              >=1.2.7.0  && <1.4
    , haskeline             ^>=0.8.1
    , hstream-common
    , hstream-store
    , network               ^>=3.1.0
    , optparse-applicative  ^>=0.16
    , table-layout          ^>=0.9.1
    , text                  ^>=1.2.3.0
    , time
    , transformers          ^>=0.5.5.0
    , unordered-containers  ^>=0.2.9.0
    , vector                ^>=0.12.0.1
    , Z-Data
    , Z-IO
    , zoovisitor            >=0.1.2    && <1

  build-tool-depends: cpphs:cpphs >=1.20 && <1.21
  include-dirs:       /usr/local/include
  extra-lib-dirs:     /usr/local/lib
  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    FlexibleContexts
    GADTSyntax
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    UnliftedFFITypes

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

executable hadmin-server
  main-is:            admin.hs
  hs-source-dirs:     app
  build-depends:
    , base                  >=4.13 && <5
    , bytestring            ^>=0.10
    , containers            ^>=0.6
    , ghc-prim              >=0.5  && <1.0
    , grpc-haskell
    , grpc-haskell-core
    , haskeline
    , hstore-admin
    , hstream-admin
    , hstream-common
    , hstream-store
    , network
    , optparse-applicative
    , primitive             ^>=0.7
    , random                ^>=1.2
    , text
    , time                  >=1.9  && <2.0
    , unix
    , vector
    , Z-Data
    , Z-IO

  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N
