cabal-version: 2.4
name:          hstream-admin
version:       0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on GitHub at
  <https://github.com/hstreamdb/hstream#readme>

license:       BSD-3-Clause
copyright:     Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:        lambda@emqx.io
maintainer:    lambda@emqx.io
tested-with:   GHC ==8.10.7
category:      Database
homepage:      https://github.com/hstreamdb/hstream
bug-reports:   https://github.com/hstreamdb/hstream/issues
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

flag ReleaseBuild
  default:     False
  description:
    Enables all optimisations, leads to slower build time and better performance

common shared-properties
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  if flag(releasebuild)
    ghc-options:
      -feager-blackholing -flate-dmd-anal -flate-specialise
      -fspec-constr-keen -fstatic-argument-transformation
      -funbox-strict-fields

    -- Build Maintenance.Types(gen-hs2/Maintenance/Types.hs) with -O2 on aarch64
    -- platform will lead to a long long compile times, so here we disable it.
    if !arch(aarch64)
      ghc-options: -O2

executable hadmin
  import:             shared-properties
  main-is:            admin.hs
  hs-source-dirs:     app
  build-depends:
    , base                  >=4.13   && <5
    , bytestring
    , containers            ^>=0.6
    , deepseq
    , ghc-prim              >=0.5    && <1.0
    , grpc-haskell
    , grpc-haskell-core
    , haskeline
    , hstream-admin-server
    , hstream-api-hs
    , hstream-common
    , hstream-common-base
    , hstream-store
    , network               ^>=3.1.2
    , optparse-applicative
    , primitive             ^>=0.7
    , process
    , proto3-suite
    , random                ^>=1.2
    , text
    , time                  >=1.9    && <2.0
    , unix
    , vector
    , Z-Data

  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
