cabal-version:      2.2
name:               hstream-core
version:            0.1.0.0
synopsis:           High performance stream processing platform for IoT data written in Haskell.
description:        Please see the README on Github at
                    <https://github.com/hstream-io/hstream#readme>
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             Feng Lee <feng@emqx.io>
maintainer:         lambda@emqx.io
tested-with:        GHC == 8.10.2, GHC == 8.8.4
category:           Database
homepage:           https://github.com/hstream-io/hstream
bug-reports:        https://github.com/hstream-io/hstream/issues
build-type:         Simple
extra-source-files: ChangeLog.md
                    README.md

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

flag server-tests
  default:     False
  description: Turn on \"real\" tests for db server

library
  exposed-modules:  HStream.LogStore.Base
                    HStream.LogStore.Exception
                    HStream.LogStore.Utils
                    HStream.Server
                    HStream.Utils
  other-modules:    HStream.LogStore.Internal
                    HStream.Server.Command
                    HStream.Server.Command.Response
                    HStream.Server.Store
                    HStream.Server.Types
  hs-source-dirs:   src
  build-depends:    base                      >= 4.11 && < 5
                  , aeson                     ^>= 1.4
                  , async                     ^>= 2.2
                  , atomic-primops            ^>= 0.8
                  , binary-strict             ^>= 0.4
                  , bytestring                ^>= 0.10
                  , bytestring-strict-builder ^>= 0.4
                  , case-insensitive          ^>= 1.2
                  , co-log
                  , concurrency               ^>= 1.11
                  , containers                ^>= 0.6
                  , data-default              ^>= 0.7
                  , deepseq                   ^>= 1.4
                  , directory                 ^>= 1.3
                  , filepath                  ^>= 1.4
                  , hashable                  ^>= 1.3
                  , hesp
                  , lrucache                  ^>= 1.2
                  , monad-control             ^>= 1.0
                  , mtl                       ^>= 2.2
                  , network                   >= 3.1.2
                  , resourcet                 ^>= 1.2
                  , rocksdb-haskell-bindings  >= 0.1 && < 1
                  , stm                       ^>= 2.5
                  , text                      ^>= 1.2
                  , time                      >= 1.9.1 && < 2
                  , transformers-base         ^>= 0.4
                  , unordered-containers      ^>= 0.2
                  , uuid                      ^>= 1.3
                  , vector                    ^>= 0.12
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates
                    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

executable hstream-store-bench
  main-is:          store-bench.hs
  hs-source-dirs:   tools
  build-depends:    base                 >= 4.11 && < 5
                  , atomic-primops
                  , bytestring
                  , clock
                  , cmdargs
                  , containers
                  , hstream-core
                  , lifted-async
                  , text
                  , transformers
                  , unordered-containers
                  , vector
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-do-bind -O2 -threaded -rtsopts -with-rtsopts=-N

test-suite hstream-core-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Test.LogStoreSpec
                      Test.ServerSpec
  hs-source-dirs:     test
  build-depends:      base                >= 4.11 && < 5
                    , bytestring
                    , containers
                    , hesp
                    , hspec
                    , hstream-core
                    , lifted-async
                    , mtl
                    , network             >= 3.1.2
                    , resourcet
                    , temporary-resourcet
                    , text
                    , transformers
                    , utf8-string
                    , vector
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
                      -threaded -rtsopts -with-rtsopts=-N

  if flag(server-tests)
    cpp-options: -DSERVER_TESTS

benchmark hstream-store-benchmark
  type:             exitcode-stdio-1.0
  main-is:          store-benchmark.hs
  hs-source-dirs:   benchmark
  build-depends:    base                >= 4.11 && < 5
                  , bytestring
                  , criterion
                  , hstream-core
                  , mtl
                  , resourcet
                  , temporary-resourcet
                  , transformers
                  , vector
  default-language: Haskell2010
  ghc-options:      -W -Wunused-do-bind -O2
